Created a Module to fetch Instruments names from a json file and display through a select dropbox

--- a/ui/views/nav.html
+++ b/ui/views/nav.html
@@ -72,11 +72,14 @@
                 <!-- <li><a href="#/pages/invoice"><i class="fa fa-caret-right"></i><span data-i18n="Invoice"></span></a></li> -->
             </ul>
         </li>
-        <li><a href="#/hello"> <i class="fa fa-heart"><span class="icon-bg bg-violet"></span></i>Hello World</span> </a></li>
         <li>
-            <a href="#/Assay"><i class="fa fa-file-text-o"><span class="icon-bg bg-violet"></span></i><span data-i18n="Assay"></span></a>
+            <a href="#/hello"> <i class="fa fa-heart"><span class="icon-bg bg-violet"></span></i>Hello World</span> </a></li>
+
+        <li>
+            <a href="#/Assay"><i class="fa fa-file-text-o"><span class="icon-bg bg-violet"></span></i><span data-i18n="Assay"> Assay</span></a>
             <ul>
                 <li><a href="#/Assay/Mai"><i class="fa fa-caret-right"></i><span data-i18n="Mai"></span></a></li>
+                <li><a href="#/Assay/AssayScheduler"><i class="fa fa-caret-right"></i><span data-i18n="Assay Scheduler"></span></a></li>
             </ul>
         </li>
     </ul>
